test/arrays/bradc/refArray3.good
refArray3.chpl:1: In function 'main':
refArray3.chpl:8: error: cannot assign to const variable
refArray3.chpl:9: error: cannot assign to const variable
